--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -21,7 +21,7 @@
 
 body {
   font-family: "Lato", sans-serif;
-  color: red;
+  color: var(--mainBlack);
   background: var(--mainWhite);
   line-height: 1.4;
   font-size: 1rem;
